--- a/CoCo/front-end/manager/products/css/product-list-page.css
+++ b/CoCo/front-end/manager/products/css/product-list-page.css
@@ -107,3 +107,16 @@
         grid-template-columns: auto;
     }
 }
+.filter{
+    display:flex;
+    width:80%;
+    margin:auto;
+}
+.dropdown-toggle{
+    background-color: white !important;
+    border-color: #398AB9;
+}
+.package-detail p{
+    margin-left: 2px;
+    font-size: smaller;
+}
