--- a/CoCo/front-end/admin/managers/css/add-manager-style.css
+++ b/CoCo/front-end/admin/managers/css/add-manager-style.css
@@ -119,7 +119,7 @@ input[type="checkbox"]{
 /*        Super extra small devices only (iPhone 4)     */
 @media (max-width: 570px) {
     .container{
-        height: 650px;
+        height: 680px;
     }
 
     .content{
@@ -131,4 +131,26 @@ input[type="checkbox"]{
         height: 12px;
     }
 
+}
+
+@media only screen and (max-width: 576px) {
+    .container{
+        background-color: #FFFFFF;
+        box-shadow: none;
+        margin-top: 10px;
+        width: 100%;
+    }
+    .banner{
+        position: relative;
+    }
+    .searchbar-input{
+        background-color: var(--grey2);
+        width: 80%;
+    }
+    .footer-top{
+        flex-direction: column;
+    }
+    .footer-box{
+        width: 86%;
+    }
 }
