--- a/CoCo/front-end/admin/managers/css/list-manager-style.css
+++ b/CoCo/front-end/admin/managers/css/list-manager-style.css
@@ -34,10 +34,12 @@ table tr {
 
 @media only screen and (max-width: 576px) {
     .container{
-        background-color: #FFFFFF;
         box-shadow: none;
         margin-top: 10px;
         width: 100%;
+    }
+    body{
+        background-color: white;
     }
     .banner{
         position: relative;
