--- a/CoCo/front-end/css/style.css
+++ b/CoCo/front-end/css/style.css
@@ -4,6 +4,7 @@
     --grey1: #D8D2CB;
     --grey2: #EEEEEE;
 }
+
 body{
     font-family: "Roboto", sans-serif;
     margin:0px;
@@ -179,10 +180,20 @@ li a {
     align-items: center;
     justify-content: center;
 }
-
+@media only screen and (max-width: 900px){
+    .content{
+        min-height: 650px;
+    }
+}
 @media only screen and (max-width: 800px) {
     .searchbar{
         width:90%;
+    }
+    .footer-top{
+        flex-direction: column;
+    }
+    .footer-box{
+        width: 86%;
     }
 }
 @media only screen and (max-width: 576px) {
@@ -201,12 +212,7 @@ li a {
     .searchbar-input{
         width: 80%;
     }
-    .footer-top{
-        flex-direction: column;
-    }
-    .footer-box{
-        width: 86%;
-    }
+    
 }
 
 .avt {
