--- a/CoCo/front-end/admin/managers/css/list-manager-history-style.css
+++ b/CoCo/front-end/admin/managers/css/list-manager-history-style.css
@@ -39,7 +39,7 @@ table{
         position: relative;
     }
     .searchbar-input{
-        background-color: var(--grey2);
+        background-color: #ffffff;
         width: 80%;
     }
     .footer-top{
