--- a/CoCo/front-end/admin/managers/css/list-manager-style.css
+++ b/CoCo/front-end/admin/managers/css/list-manager-style.css
@@ -45,7 +45,7 @@ table tr {
         position: relative;
     }
     .searchbar-input{
-        background-color: var(--grey2);
+        background-color: #ffffff;
         width: 80%;
     }
     .footer-top{
