--- a/CoCo/front-end/admin/managers/css/manager-details-style.css
+++ b/CoCo/front-end/admin/managers/css/manager-details-style.css
@@ -84,7 +84,7 @@
         position: relative;
     }
     .searchbar-input{
-        background-color: var(--grey2);
+        background-color: #ffffff;
         width: 80%;
     }
     .footer-top{
