--- a/CoCo/front-end/admin/managers/css/add-manager-style.css
+++ b/CoCo/front-end/admin/managers/css/add-manager-style.css
@@ -146,7 +146,7 @@ input[type="checkbox"]{
         position: relative;
     }
     .searchbar-input{
-        background-color: var(--grey2);
+        background-color: #ffffff;
         width: 80%;
     }
     .footer-top{
