--- a/CoCoPay/front-end/css/style.css
+++ b/CoCoPay/front-end/css/style.css
@@ -41,7 +41,9 @@ h2 p strong {
     color: red;
 }
 
-form {
+.login-form {
+    float: right;
+    background-color: #C4C4C4;
     border-radius: 40px;
     width: 400px;
 }
@@ -56,6 +58,12 @@ form {
     border: 0px;
     border-radius: 15px;
     margin: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.password-missing {
     display: flex;
     align-items: center;
     justify-content: center;
