--- a/CoCoPay/front-end/user/css/style.css
+++ b/CoCoPay/front-end/user/css/style.css
@@ -19,6 +19,11 @@ body{
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 0 20px 0 rgba(0, 0, 0, 0.19);
     z-index: 100;
 }
+li a {
+    font-family: "Roboto", sans-serif !important;
+    color: var(--blue1) !important;
+    font-weight: bold !important;
+}
 
 .index .banner{
     width:50%;
@@ -41,9 +46,7 @@ h2 p strong {
     color: red;
 }
 
-.login-form {
-    float: right;
-    background-color: #C4C4C4;
+form {
     border-radius: 40px;
     width: 400px;
 }
@@ -58,12 +61,6 @@ h2 p strong {
     border: 0px;
     border-radius: 15px;
     margin: 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.password-missing {
     display: flex;
     align-items: center;
     justify-content: center;
