--- a/CoCo/front-end/admin/addresses/css/list-addresses-style.css
+++ b/CoCo/front-end/admin/addresses/css/list-addresses-style.css
@@ -19,13 +19,42 @@
 }
 
 .custom-table{
-    width: 80%;
+    width: 100%;
 }
 
-.table-lock{
+.table-stt{
+    text-align: center;
+}
+
+.table-text{
+    text-align: left;
+    margin-left: 1px;
+}
+
+.table-number{
+    text-align: center;
+}
+
+.custom-check-box{
+    background-color: #eeeeee;
+
+}
+.table-button{
    text-align: center; 
    color:#1C658C;
-   width:20%;
+   width:10%;
+}
+
+.table-checkbox{
+    text-align: center; 
+    color:#1C658C;
+    width:20%;
+ }
+
+.table-button span{
+    margin-left: 5px;
+    margin-right:5px;
+    cursor: pointer;
 }
 
 table tr {
