--- a/CoCo/front-end/admin/addresses/css/list-addresses-style.css
+++ b/CoCo/front-end/admin/addresses/css/list-addresses-style.css
@@ -2,7 +2,7 @@
     padding-top: 5px;
     margin: auto;
     width:80%;
-    height:560px;
+    height:720px;
     background-color: white;
     margin-top: 100px;
     z-index: 10;
@@ -29,10 +29,12 @@
 .table-text{
     text-align: left;
     margin-left: 1px;
+    width: 35%;
 }
 
 .table-number{
     text-align: center;
+    width: 15%;
 }
 
 .custom-check-box{
@@ -48,17 +50,30 @@
 .table-checkbox{
     text-align: center; 
     color:#1C658C;
-    width:20%;
+    width:10%;
  }
 
 .table-button span{
     margin-left: 5px;
     margin-right:5px;
     cursor: pointer;
+    width:20%;
 }
 
 table tr {
     cursor: pointer;
+}
+
+@media (min-width: 800px) and (max-width: 991px) {
+    .container{
+        height: 820px;
+    }
+}
+
+@media (max-width: 779px) {
+    .container{
+        height: 880px;
+    }
 }
 
 @media only screen and (max-width: 576px) {
