--- a/CoCo/front-end/admin/addresses/css/address-detail-style.css
+++ b/CoCo/front-end/admin/addresses/css/address-detail-style.css
@@ -42,15 +42,102 @@
     align-self: center;
 }
 
-.full-name-manager{
+#name{
     font-size: 20sp;
     font-weight: bold;
     text-align: center;
 }
 
 .custom-btn{
-    padding: 10px 20px;
+    padding: 10px 30px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #398AB9;
+    font-size: 10pt;
 }
+
+.main-content {
+    height: 480px;
+    border: 3px solid #D8D2CB;
+    padding: 10px 20px;
+    background-color: #EEEEEE;
+    text-align: center;
+}
+
+.form-heading{
+    margin-top: 30px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 16pt;
+    text-align: center;
+}
+
+.form-add-manager{
+    margin: 0% 10%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.form-group.row{
+    background-color: #c4c4c4;
+    margin-bottom: 10px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+.form-group label{
+    font-weight: bold;
+    white-space: nowrap;
+}
+
+.row-button{
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    margin-top: 10px;
+}
+
+.exit-btn{
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #000000;
+    font-size: 10pt;
+    padding: 10px 30px;
+}
+
+input[type="text"],input[type="password"]{
+    border-radius: 0;
+}
+
+input[type="checkbox"]{
+    width: 20px;
+    height: 20px;
+}
+
+@media (max-width: 767px){
+    .container{
+        height: 680px;
+    }
+    .avatar{
+        display: none;
+    }
+    .side-info {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        height: 80px;
+        border: 3px solid #D8D2CB;
+        padding: 10px 20px;
+        background-color: #EEEEEE;
+    }
+}
+
+
 
 @media (max-width: 767px){
     .container{
