--- a/CoCo/front-end/admin/addresses/css/address-detail-style.css
+++ b/CoCo/front-end/admin/addresses/css/address-detail-style.css
@@ -57,6 +57,15 @@
     font-size: 10pt;
 }
 
+.custom-btn2{
+    padding: 10px 10px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #398AB9;
+    font-size: 10pt;
+}
+
 .main-content {
     height: 480px;
     border: 3px solid #D8D2CB;
