--- a/CoCo/views/admin/addresses/edit-address-detail-page.hbs
+++ b/CoCo/views/admin/addresses/edit-address-detail-page.hbs
@@ -1,37 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- stylesheet -->
+<link rel="stylesheet" href="/css/admin/style.css">
+<link rel="stylesheet" href="/css/admin/addresses/address-detail-style.css">
+<!-- stylesheet -->
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-        rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
-        crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="./css/address-detail-style.css">
-    <title>Chỉnh sửa thông tin địa điểm cách ly, điều trị</title>
-</head>
-
-<body onload="loadData('Nguyen Van A')">
-    <main class="index">
-        <nav></nav>
-        <script src="/js/navbar.js"></script>
-        <script>handleNavbar('admin');</script>
-        
-        <img src="../../images/banner.png" alt="banner" class="banner">
-
-        <div class="container">
-            <nav style="--bs-breadcrumb-divider: '>'; --bs-breadcrumb-item-padding-x: 2px; --bs-breadcrumb-divider-color: #A19C9C; --bs-breadcrumb-font-size: 24sp;" aria-label="breadcrumb" class="nav-breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="./list-addresses-page.html">Địa điểm cách ly, điều trị</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Bệnh viện dã chiến số 1</li>
-                </ol>
-              </nav>
-            <div class="content">
+<div class="container">
+    <nav style="--bs-breadcrumb-divider: '>'; --bs-breadcrumb-item-padding-x: 2px; --bs-breadcrumb-divider-color: #A19C9C; --bs-breadcrumb-font-size: 24sp;" aria-label="breadcrumb" class="nav-breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/admin/addresses/list-addresses-page">Địa điểm cách ly, điều trị</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Bệnh viện dã chiến số 1</li>
+        </ol>
+    </nav>
+            <div class="content-min">
                 <div class="row">
                     <div class="col-lg-8 col-md-7 col-sm-12">
                         <div class="main-content">
@@ -88,7 +67,7 @@
                     <div class="col-lg-4 col-md-5 col-sm-12 d-flex flex-column">
                       <div class="side-info bg-form p-5">
                             <div class="avatar">
-                                <img class="img-thumbnail" src="../images/hospital.jpg" alt="avatar">
+                                <img class="img-thumbnail" src="/images/admin/hospital.jpg" alt="avatar">
                             </div>
                             <div id="name">Bệnh viện dã chiến số 1</div>
                             <div class="button">
@@ -102,15 +81,3 @@
                 </div>
             </div>
         </div>
-
-        <footer></footer>
-        <script src="/js/footer.js"></script>
-        <script>handleFooter();</script>
-    </main>
-
-    <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="js/add-manager-history-table.js"></script>
-</body>
-
-</html>
