add route of products

--- a/CoCo/public/css/manager/products/product-style.css
+++ b/CoCo/public/css/manager/products/product-style.css
@@ -78,3 +78,9 @@
         margin:auto 5%;
     }
 }
+.drop-down{
+    background-color:var(--grey2);
+    outline: none;
+    border:none;
+    font-weight: bold;
+}
