--- a/CoCo/public/css/admin/address/address-detail-style.css
+++ b/CoCo/public/css/admin/address/address-detail-style.css
@@ -17,7 +17,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.content{
+.content-min{
     margin: auto;
     width:90%;
     height:500px;
