--- a/CoCo/public/css/admin/manager/add-manager-style.css
+++ b/CoCo/public/css/admin/manager/add-manager-style.css
@@ -14,7 +14,7 @@
     margin-left: 10px;
 }
 
-.content{
+.content-min{
     border: 1px solid black !important; 
     margin: auto;
     width:60%;
@@ -90,7 +90,7 @@ input[type="checkbox"]{
         height: 520px;
     }
 
-    .content{
+    .content-min{
         height: 460px;
     }
 
@@ -105,7 +105,7 @@ input[type="checkbox"]{
         height: 570px;
     }
 
-    .content{
+    .content-min{
         height: 500px;
     }
 
@@ -122,7 +122,7 @@ input[type="checkbox"]{
         height: 680px;
     }
 
-    .content{
+    .content-min{
         height: 590px;
     }
 
