--- a/CoCo/public/css/manager/products/product-style.css
+++ b/CoCo/public/css/manager/products/product-style.css
@@ -84,3 +84,8 @@
     border:none;
     font-weight: bold;
 }
+.confirm-btn{
+    outline: none;
+    border: none;
+    background-color:var(--blue2);
+}
