--- a/CoCo/views/admin/index.hbs
+++ b/CoCo/views/admin/index.hbs
@@ -3,7 +3,7 @@
 <!-- stylesheet -->
 
 <!--contain-->
-<section class="container py-5" style="height:400px">
+<section class="container py-5" style="height:400px;margin-top:300px">
     <h1 class="welcome" style="width:auto">Chào mừng đến với hệ thống quản lý Covid-19</h1>
 </section>
  <!--contain-->
