--- a/CoCo/views/index.hbs
+++ b/CoCo/views/index.hbs
@@ -1,4 +1,4 @@
-<section class="container py-5" style="height:800px">
+<section class="container py-5" style="height:800px;margin-top:300px">
     <h1 class="welcome">Chào mừng đến với hệ thống quản lý Covid-19</h1>
 
     <div class="login-form py-5 px-5">
