--- a/CoCo/views/manager/index.hbs
+++ b/CoCo/views/manager/index.hbs
@@ -1,3 +1,3 @@
-<section class="container py-5" style="height:400px">
+<section class="container py-5" style="height:400px;margin-top:300px">
     <h1 class="welcome" style="width:auto">Chào mừng đến với hệ thống quản lý Covid-19</h1>
 </section>
