--- a/CoCo/views/related-people/index.html
+++ b/CoCo/views/related-people/index.html
@@ -23,7 +23,7 @@
             <img src="../images/banner.png" alt="banner" class="banner">
         </section>
 
-        <section class="container py-5" style="height:400px">
+        <section class="container py-5" style="height:400px;margin-top:300px">
             <h1 class="welcome" style="width:auto">Chào mừng đến với hệ thống quản lý Covid-19</h1>
         </section>
 
