--- a/CoCo/views/admin/addresses/add-address-page.hbs
+++ b/CoCo/views/admin/addresses/add-address-page.hbs
@@ -12,27 +12,27 @@
         </nav>
     <div class="content-min">
         <h3 class="form-heading mb-3 p-2 ">Thêm địa điểm cách ly, điều trị</h3>
-        <form class="form-add-manager p-2">
+        <form class="form-add-manager p-2" action="/admin/address/add" method="post">
             <div class="form-group row">
                 <label for="name" class="col-lg-5 col-sm-5 col-form-label">Tên địa điểm</label>
                 <div class="col-lg-7 col-sm-7">
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" id="name" name="name">
                 </div> 
             </div>
             <div class="form-group row">
-            <label for="number" class="col-lg-5 col-sm-5 col-form-label">Số thu dụng</label>
-            <div class="col-lg-7 col-sm-7">
-                <input type="text" class="form-control" id="number">
-            </div>
+                <label for="number" class="col-lg-5 col-sm-5 col-form-label">Số thu dụng</label>
+                <div class="col-lg-7 col-sm-7">
+                    <input type="text" class="form-control" id="number" name="number">
+                </div>
             </div>
             <div class="form-group row">
                 <label for="tankage" class="col-lg-5 col-sm-5 col-form-label" style="margin-bottom: 5px;">Sức chứa</label>
                 <div class="col-lg-7 col-sm-7">
-                <input id="tankage" type="text" class="form-control" style="width: 80%; margin: 0px 5px;">
+                <input id="tankage" type="text" name="tankage" class="form-control" style="width: 80%; margin: 0px 5px;">
                 </div> 
-                <label for="cur-quantity" class="col-lg-5 col-sm-5 col-form-label">Số lượng hiện tại</label>
+                <label for="curQuantity" class="col-lg-5 col-sm-5 col-form-label">Số lượng hiện tại</label>
                 <div class="col-lg-7 col-sm-7">
-                <input id="cur-quantity" type="text" class="form-control" style="width: 80%; margin: 0px 5px;">
+                <input id="curQuantity" type="text" name="curQuantity" class="form-control" style="width: 80%; margin: 0px 5px;">
                 </div> 
             </div>
             <div class="form-group row">
@@ -52,7 +52,7 @@
             </div>
             <div class="row button">
             <div class="col-sm-10">
-                <button type="button" class="btn" onclick="window.location.href='./list-manager-page.html'">Lưu</button>
+                <button type="submit" class="btn">Lưu</button>
             </div>
             </div>
         </form>
