--- a/CoCo/views/admin/managers/add-manager-page.hbs
+++ b/CoCo/views/admin/managers/add-manager-page.hbs
@@ -1,85 +1,58 @@
 <!-- stylesheet -->
 <link rel="stylesheet" href="/css/admin/style.css">
-<link rel="stylesheet" href="/css/admin/filter-style.css">
-<link rel="stylesheet" href="/css/admin/search-bar-style.css">
-<link rel="stylesheet" href="/css/admin/table-style.css">
-<link rel="stylesheet" href="/css/admin/pagination.css">
-<link rel="stylesheet" href="/css/admin/manager/list-manager-history-style.css">
+<link rel="stylesheet" href="/css/admin/manager/add-manager-style.css">
 <!-- stylesheet -->
 
 <div class="container">
-    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="nav-breadcrumb">
+    <nav style="--bs-breadcrumb-divider: '>'; --bs-breadcrumb-item-padding-x: 2px; --bs-breadcrumb-divider-color: #A19C9C; --bs-breadcrumb-font-size: 24sp;" aria-label="breadcrumb" class="nav-breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="./list-manager-page.html">Người quản lý</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Xem danh sách lịch sử hoạt động người quản lý</li>
+            <li class="breadcrumb-item"><a href="/admin/manager/list-manager-page">Người quản lý</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Thêm người quản lý</li>
         </ol>
-    </nav>
-    <div class="searchbar">
-        <input type="text" class="searchbar-input" placeholder="Tìm kiếm hoạt động người quản lý">
-        <i class="fa-solid fa-magnifying-glass"></i>
-    </div>
-    <div class="filter">
-        <p id="filter-heading">Bộ lọc</p>
-        <div id="filters" class="row" style="clear: both;">
-            <div class="col-lg-4 col-md-12 col-sm-12 mb-3">
-                <div class="dropdown">
-                    <button class="btn btn-light dropdown-toggle text-black" type="button" id="dropdownMenu2"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Sắp xếp theo
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <li><button class="dropdown-item" type="button">Username từ A->Z</button></li>
-                        <li><button class="dropdown-item" type="button">Username từ Z->A</button></li>
-                        <li><button class="dropdown-item" type="button">Thời gian từ gần nhất</button></li>
-                        <li><button class="dropdown-item" type="button">Thời gian từ xa nhất</button></li>
-                    </ul>
-                </div>
+        </nav>
+    <div class="content-min">
+        <h3 class="form-heading mb-3 p-2 ">Thêm tài khoản người quản lý</h3>
+        <form class="form-add-manager p-2" action="/admin/manager/add" method="post">
+            <div class="form-group row">
+                <label for="username" class="col-lg-5 col-sm-5 col-form-label">Tên người dùng</label>
+                <div class="col-lg-7 col-sm-7">
+                    <input type="text" class="form-control" id="username" name="username">
+                </div> 
             </div>
-            <div class="col-lg-4 col-md-12 col-sm-12 mb-3">
-                <div class="dropdown">
-                    <button class="btn btn-light dropdown-toggle text-black" type="button" id="dropdownMenu2"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Lọc theo thời gian
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <li><button class="dropdown-item" type="button">Quý I 2022</button></li>
-                        <li><button class="dropdown-item" type="button">Quý IV 2021</button></li>
-                        <li><button class="dropdown-item" type="button">Quý III 2021</button></li>
-                        <li><button class="dropdown-item" type="button">Quý II 2021</button></li>
-                        <li><button class="dropdown-item" type="button">Quý I 2021</button></li>
-                    </ul>
-                </div>
+            <div class="form-group row">
+            <label for="password" class="col-lg-5 col-sm-5 col-form-label">Mật khẩu</label>
+            <div class="col-lg-7 col-sm-7">
+                <input type="password" class="form-control" id="password" name="password">
             </div>
-            <div class="col-lg-4 col-md-12 col-sm-12">
-                <div class="dropdown">
-                    <button class="btn btn-light dropdown-toggle text-black" type="button" id="dropdownMenu2"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Lọc theo phân quyền
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <li><button class="dropdown-item" type="button">Nhu yếu phẩm</button></li>
-                        <li><button class="dropdown-item" type="button">Người bệnh</button></li>
-                    </ul>
-                </div>
             </div>
-        </div>
-    </div>
-    <div id="list-manager-history-table" class="table-responsive" style="height: 360px; width: 80%; margin: auto;">
-    </div>
-    <div class="page-container">
-        <button class="first-page" disabled>
-            <i class="fas fa-angle-double-left"></i>
-        </button>
-        <button class="prev-page" disabled>
-            <i class="fas fa-angle-left"></i>
-        </button>
-        <div id="pagination"></div>
-        <button class="next-page">
-            <i class="fas fa-angle-right"></i>
-        </button>
-        <button class="last-page">
-            <i class="fas fa-angle-double-right"></i>
-        </button>
+            <div class="form-group row">
+            <label for="re-password" class="col-lg-5 col-sm-5 col-form-label">Nhập lại mật khẩu</label>
+            <div class="col-lg-7 col-sm-7">
+                <input type="password" class="form-control" id="re-password" name="rePassword">
+            </div>
+            </div>
+            <div class="form-group row">
+            <label  class="col-sm-5 col-form-label">Phân quyền</label>
+            <div class="col-sm-7">
+                <table>
+                <tr>
+                    <td><input name="patient" id="patient" value="patient" type="checkbox"></td>
+                    <th><label for="patient" class="p-2">Người bệnh</label></th>
+                </tr>
+                <tr>
+                    <td><input name="necessities" id="necessities" value="necessities" type="checkbox"></td>
+                    <th><label for="necessities">Nhu yếu phẩm</label></th>
+                </tr>
+                </table>
+                
+            </div>
+            </div>
+            <div class="row button">
+            <div class="col-sm-10">
+                <button type="submit" class="btn">Lưu</button>
+            </div>
+            </div>
+        </form>
     </div>
 </div>
 
