reconstruct Package List Page for related people

--- a/CoCo/public/css/related-people/package-list.css
+++ b/CoCo/public/css/related-people/package-list.css
@@ -29,7 +29,7 @@
     border-radius: 50%;
     width: 75px;
     height: 75px;
-    z-index: 11;
+    z-index: 100;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     display: flex;
     justify-content: center;
@@ -37,6 +37,7 @@
     cursor: pointer;
     animation: shake 1s; 
     animation-iteration-count: infinite; 
+    background-color: white;
 }
 
 @keyframes shake {
